# Bricks-Portfolio

./: .env.example  .gitignore  AGENTS.md  CREATE_REPO_INSTRUCTIONS.md  GITHUB_ACTIONS_SETUP.md  GOOGLE_SHEETS_SETUP.md  PLAN.md  README.md  cloudsetup.md  daily_portfolio_report.py  pyproject.toml  test_email.py  test_google_sheets.py
.github/workflows/: daily-portfolio-report.yml
EigenLedger/: __init__.py  main.py
EigenLedger/modules/: email_sender.py  google_auth.py
